@@ -9,7 +9,7 @@
 //
 /**@name unit_save.cpp - Save unit. */
 //
-//      (c) Copyright 1998-2007 by Lutz Sammer and Jimmy Salmon
+//      (c) Copyright 1998-2008 by Lutz Sammer and Jimmy Salmon
 //
 //      This program is free software; you can redistribute it and/or modify
 //      it under the terms of the GNU General Public License as published by
@@ -352,9 +352,6 @@ void SaveUnit(const CUnit *unit, CFile *file)
 	//
 	switch (unit->Orders[0]->Action) {
 		case UnitActionStill:
-			if (unit->Type->CanHarvestFrom) {
-				file->printf(", \"resource-active\", %d", unit->Data.Resource.Active);
-			}
 			break;
 		case UnitActionBuilt:
 			{
